# alarm-daemon

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ci.sh  rust-toolchain.toml
.github/workflows/: ci.yml
alarm-daemon/: Cargo.toml  README.md  REQUIREMENTS.md  TODO.md  setup.sh
alarm-daemon-client/: Cargo.toml  README.md
alarm-daemon-client/examples/: basic.rs
alarm-daemon-client/src/: client.rs  constants.rs  error.rs  lib.rs
alarm-daemon/data/: README.md
alarm-daemon/data/dbus/: org.helm.AlarmDaemon.Control.xml  org.helm.AlarmDaemon.conf  org.helm.AlarmDaemon.service
alarm-daemon/data/etc/: alarm-daemon.conf.example
alarm-daemon/data/systemd/: alarm-daemon.service
alarm-daemon/data/sysusers.d/: helm-alarm-daemon.conf
alarm-daemon/data/tmpfiles.d/: helm-alarm-daemon.conf
alarm-daemon/src/: config.rs  logging.rs  main.rs  systemd.rs
alarm-daemon/src/audio/: cpal_audio.rs  decoded.rs  error.rs  fake.rs  mod.rs  profile.rs  sounds.rs
alarm-daemon/src/daemon/: alarm_daemon.rs  alarm_status.rs  mod.rs  state.rs  transition.rs
alarm-daemon/src/daemon/persistence/: mod.rs  persisted_state.rs  persistence_error.rs  startup_recovery.rs
alarm-daemon/src/error/: alarm_error.rs  mod.rs
alarm-daemon/src/ipc/: control.rs  mod.rs
alarm-daemon/tests/: dbus_surface.rs  demo_flow.rs  introspect_xml.rs  persistence_restart.rs  setup_install_update.rs  setup_uninstall.rs
alarm-daemon/tests/common/: mod.rs
