[package]
name = "alarm-daemon-client"
description = "Typed Rust client for the org.helm.AlarmDaemon D-Bus API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "alarm_daemon_client"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true
