[package]
name = "alarm-daemon"
description = "Helm sailboat alarm daemon (see REQUIREMENTS.md)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true

[[bin]]
name = "alarm-daemon"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
symphonia = { version = "0.5", default-features = false, features = ["wav", "flac", "pcm"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "sync"] }
tracing = { workspace = true }
tracing-journald = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
redb = "2"
sd-notify = "0.5"

[dev-dependencies]
fs2 = "0.4"
quick-xml = "0.39"

[lints]
workspace = true